--- a/src/css/RepairHistory.css
+++ b/src/css/RepairHistory.css
@@ -5,32 +5,16 @@ body {
 
 .repairHistory_title_container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    padding: 10px;
+    padding: 0 25px 0 16px;
+    height: 49px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
 
 .repairHistory_title_container img {
     cursor: pointer;
-}
-
-.repairHistory_range{
-    width: 198px;
-    height: 48px;
-    font-size: 12px;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    border-radius: 20px;
-    background-color: #F7F7F7;
-    margin: 24px;
-}
-
-.repairHistory_range_icon {
-    margin: 0 10px 0 0;
 }
 
 .repairHistory_table_container {
@@ -67,4 +51,13 @@ body {
 .paging_container {
     margin: 48px 0 0 0;
     align-self: center;
+}
+
+.repairHistory_title_img {
+    height: 25px;
+}
+
+.repairHistory_title {
+    display: flex;
+    align-items: center;
 }
