--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,14 +3,13 @@ body, #root{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
 }
 
 .content_container {
     flex-grow: 1;
     padding: 20px;
-    min-width: 400px;
-    max-width: 500px;
-    margin: 0 auto;
+    min-width: 300px;
 }
 
 .title_container {
@@ -18,5 +17,5 @@ body, #root{
     align-items: center;
     font-size: 16px;
     padding: 10px;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
