--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,14 +16,12 @@ body, #root{
     justify-content: center;
     padding: 24px;
     min-width: 320px;
-    max-width: 500px;
 }
 
 .content_container {
     flex-grow: 1;
     padding: 24px;
     min-width: 320px;
-    max-width: 500px;
 }
 
 .title_container {
@@ -31,5 +29,5 @@ body, #root{
     align-items: center;
     font-size: 16px;
     padding: 12px 8px;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
