[FEAT] 배달팟 등록 및 댓글 기능, 채팅방 목록 페이지 추가

--- a/src/css/PostView.css
+++ b/src/css/PostView.css
@@ -5,10 +5,34 @@
 hr {
     height: 1px;
     background: #E6E6E6;
+    width: 100%;
 }
 
 .functionBtn {
     margin-left: auto;
+    padding-right: 0px 0px 0px 5px;
+}
+
+.delivery-blue-text {
+    color: #6A9CFD;
+    font-weight: 600;
+}
+
+.delivery-gray-text {
+    color: #8E8E8E;
+}
+
+.post-recruitment {
+    padding: 3px 5px;
+}
+
+.recruitment-info {
+    display: flex;
+    flex-direction: column;
+}
+
+#postview-content {
+    font-size: 12px;
 }
 
 #profileImage {
