--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -29,8 +29,10 @@ hr {
 }
 
 .post-content {
+    color: rgba(0, 0, 0, 0.50);
     font-size: 12px;
     font-weight: 400;
+    margin-top: 0px;
 }
 
 .post-details {
@@ -44,23 +46,40 @@ hr {
     font-size: 12px;
 }
 
-.post-details .post-time {
+.post-time {
     color: #B3B3B3;
 }
 
-.post-order {
+.recruitment-info {
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+
+.recruitment-info td {
+    padding-right: 4px;
+}
+
+
+.recruitment-details {
+    display: flex;
+    align-items: center;
+}
+
+.recruitment-details span {
+    padding: 3px 5px;
     font-size: 12px;
     font-weight: 400;
 }
 
-.recruitment-details span {
+.recruitment-details img {
+    margin-left: 6px;
+}
+
+.post-recruitment {
     border-radius: 2px;
     border: 0.5px solid rgba(0, 0, 0, 0.10);
     background-color: rgba(106, 156, 253, 0.30);
-    padding: 3px 6px;
-    margin-right: 5px;
-    font-size: 12px;
-    font-weight: 400;
 }
 
 .button-container {
