--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -28,6 +28,7 @@ button {
     flex-direction: column;
     flex-grow: 1;
     padding: 32px 24px 80px 24px;
+    margin: auto;
     min-width: 320px;
     max-width: 700px;
 }
@@ -57,6 +58,10 @@ Input {
     display: flex;
     align-items: center;
     margin: 12px 0;
+}
+
+.term_line img {
+    margin-left: auto;
 }
 
 .bottomBtn {
