--- a/src/css/RepairHistory.css
+++ b/src/css/RepairHistory.css
@@ -5,16 +5,17 @@ body {
 
 .repairHistory_title_container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    padding: 0 25px 0 16px;
-    height: 49px;
+    height: 24px;
+    padding: 12px 24px 12px 16px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
+    justify-content: space-between;
 }
 
 .repairHistory_title_container img {
     cursor: pointer;
+    margin: 0 8px 0 0;
 }
 
 .repairHistory_table_container {
@@ -60,4 +61,8 @@ body {
 .repairHistory_title {
     display: flex;
     align-items: center;
+}
+
+.item_none_notify {
+    color: #8E8E8E;
 }
