--- a/src/css/RepairHistoryDetail.css
+++ b/src/css/RepairHistoryDetail.css
@@ -7,12 +7,14 @@ body {
     display: flex;
     align-items: center;
     font-size: 16px;
-    padding: 10px;
+    height: 24px;
+    padding: 12px 24px 12px 16px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
 
 .repairHistoryDetail_title_container img {
     cursor: pointer;
+    margin: 0 8px 0 0;
 }
 
 .repairHistoryDetail_content_container {
