--- a/src/css/TableView.css
+++ b/src/css/TableView.css
@@ -34,8 +34,18 @@
     border-spacing: 4px 0;
 }
 
+.repairHistory .content {
+    margin: 0 0 12px 0;
+}
+
+.repairHistory .content .tableRow {
+    display: flex;
+    align-items: center;
+}
+
 .repairHistory .dateRow {
     color: #8E8E8E;
+    font-size: 12px;
 }
 
 .repairHistory .contentCol {
@@ -50,20 +60,14 @@
 }
 
 .repairHistory .confirmCol {
-    width: 32px;
     text-align: center;
     padding: 0;
+    margin: 0 4px 0 19px;
 }
 
 .repairHistory .statusCol {
-    width: 32px;
     text-align: center;
     padding: 0;
-}
-
-.repairHistory .space {
-    display: block;
-    padding: 0 0 8px 0;
 }
 
 .repairHistory .confirmCol .confirm, .repairHistory .statusCol .solve {
@@ -75,6 +79,7 @@
     height: 28px;
     color: #0358FC;
     display: flex;
+    font-size: 12px;
 }
 
 .repairHistory .confirmCol .unconfirmed, .repairHistory .statusCol .unresolved {
@@ -86,6 +91,7 @@
     height: 28px;
     color: #8E8E8E;
     display: flex;
+    font-size: 12px;
 }
 
 .noticeList .titleCol {
@@ -163,12 +169,20 @@
 }
 
 .stayout {
+    margin: 0 0 70px 0;
     width: 100%;
     border-spacing: 10px;
     border-collapse: collapse;
 }
 
+.stayout .content {
+    margin: 0 0 21px 0;
+}
+
 .stayout .tableRow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-bottom: 0.5px solid #A2A2A2;
 }
 
@@ -180,14 +194,10 @@
 }
 
 .stayout .rangeCol {
-    display: flex;
     font-size: 12px;
     font-weight: 600;
     color: #8E8E8E;
-    width: 100%;
-    justify-content: flex-end;
     height: 25px;
-    align-items: center;
 }
 
 .stayout .rangeCol .range_highlight {
@@ -213,14 +223,6 @@
     align-items: center;
 }
 
-.stayout .space {
-    height: 21px;
-}
-
-.stayout .space2 {
-    height: 70px;
-}
-
 .chatRoom {
     width: 100%;
     min-width: 300px;
@@ -231,6 +233,7 @@
     display: flex;
     justify-content: space-between;
     padding: 11px 0;
+    width: 100%;
 }
 
 .chatRoom .chatRoom_container:hover {
@@ -245,4 +248,71 @@
 .chatRoom .chatRoom_recentChatMessage, .chatRoom .chatRoom_recentChatCreatedAt{
     font-size: 12px;
     color: #8E8E8E;
+}
+
+.chatRoom_list_container {
+    display: flex;
+    align-items: center;
+}
+
+.chatRoom_round_checkbox::before {
+    content: '\2713'; /* 체크 모양 아이콘 (유니코드) */
+    font-size: 15px;
+    line-height: 13px; /* 수직 정렬을 위한 줄 높이 설정 */
+    color: white;
+}
+
+.chatRoom_round_checkbox:checked {
+    background-color: #6A9CFD;
+}
+
+.chatRoom_round_checkbox {
+    width: 18px;
+    height: 18px;
+    border: 2px solid #D9D9D9;
+    border-radius: 50%;
+    appearance: none;
+    cursor: pointer;
+    margin: 0 7px 0 0;
+    padding: 2px 3px;
+}
+
+.myPost, .myDeliveryPost {
+    padding: 0 30px;
+    overflow-y: scroll;
+}
+
+.myPost .title, .myDeliveryPost .title {
+    font-size: 16px;
+    font-weight: 500;
+    color: black;
+}
+
+.myPost .content, .myDeliveryPost .content {
+    font-size: 12px;
+    color: #8E8E8E;
+    margin: 4px 0;
+}
+
+.myPost .myPost_horizontal_container, .myDeliveryPost .myPost_horizontal_container{
+    display: flex;
+    align-items: center;
+    padding: 0 0 8px 0;
+    margin: 0 0 8px 0;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.myPost .myPost_comments, .myPost .myPost_likes, .myDeliveryPost .myPost_comments, .myDeliveryPost .myPost_likes {
+    height: 15px;
+}
+
+.myPost .commentCount, .myPost .likeCount, .myDeliveryPost .commentCount, .myDeliveryPost .likeCount {
+    font-size: 12px;
+    margin: 0 2px;
+    color: black;
+}
+
+.myDeliveryPost .createdAt, .myPost .datetime {
+    font-size: 12px;
+    color: #B3B3B3;
 }
