--- a/src/css/Bottombar.css
+++ b/src/css/Bottombar.css
@@ -1,9 +1,13 @@
 .bottom_bar {
     display: flex;
     justify-content: space-around;
+    position: fixed;
+    bottom: 0;
+    box-sizing: border-box;
+    width: 100%;
     padding: 8px;
     background: #FFF;
-    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 0px 6px 0px rgba(183, 159, 159, 0.12);
 }
 
 .bottom_bar_icon {
