--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,13 +15,15 @@ body, #root{
     flex-grow: 1;
     justify-content: center;
     padding: 24px;
+    margin: 0 auto;
     min-width: 320px;
 }
 
 .content_container {
-    flex-grow: 1;
+    max-width: 500px;
     padding: 24px;
     min-width: 320px;
+    margin: 0 auto;
 }
 
 .title_container {
