--- a/src/css/Announcement.css
+++ b/src/css/Announcement.css
@@ -13,6 +13,11 @@ body {
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
 
+.announcement_title_container div {
+    display: flex;
+    align-items: center;
+}
+
 .announcement_search_icon {
     width: 23px;
     margin: 0 4px 0 5px;
