--- a/src/css/Comment.css
+++ b/src/css/Comment.css
@@ -1,4 +1,4 @@
-#comment-profileImage {
+.comment-profileImage {
     width: 15px;
     height: 18px;
     padding: 4px;
@@ -6,29 +6,33 @@
     border: 1px solid #E6E6E6;
 }
 
-#comment-user {
+.comment-user {
     flex-grow: 1;
     padding: 4px;
     font-size: 12px;
 }
 
-#comment-time {
+.comment-user-blue {
+    color: #6A9CFD;
+}
+
+.comment-time {
     color: #8E8E8E;
     font-size: 10px;
     font-weight: 400;
 }
 
-#comment-content {
+.comment-content {
     font-size: 12px;
 }
 
-#comment-details {
+.comment-details {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
 }
 
-#comment-details span {
+.comment-details span {
     margin: 0px 5px;
     color: #8E8E8E;
     font-size: 10px;
@@ -48,7 +52,10 @@
     position: absolute;
     right: 26px;
     border-radius: 10px;
-    padding: 6px 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px 0px;
     background: #FFF;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.20);
 }
@@ -56,5 +63,12 @@
 .small-modal span {
     color: rgba(0, 0, 0, 0.90);
     font-size: 12px;
-    font-weight: 300
+    font-weight: 300;
+    padding: 0px 12px;
+    cursor: pointer;
+}
+
+.small-modal hr {
+    color: #B3B3B3;
+    width: 100%;
 }
