[FEAT, REFACTOR] 마이페이지 api 연결, 일부 뷰 수정, 청소 내역 리스트 추가

--- a/src/css/ChatRoomList.css
+++ b/src/css/ChatRoomList.css
@@ -3,6 +3,10 @@ body {
     font-family: Pretendard, serif;
 }
 
+.classRoom_list_body_container {
+    width: 87vw;
+}
+
 .chatRoom_title_container {
     display: flex;
     justify-content: space-between;
