--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -43,7 +43,6 @@
     border-radius: 10px;
     color: #FFFFFF;
     height: 50px;
-    min-width: 140px;
     text-align: center;
     width: 100%;
     font-size: 15px;
@@ -55,7 +54,7 @@
     border: none;
     border-radius: 10px;
     color: #6A9CFD;
-    min-width: 142px;
+    width: 100%;
     height: 50px;
     text-align: center;
     font-size: 15px;
@@ -71,7 +70,7 @@
     border: none;
     border-radius: 10px;
     color: #B0B0B0;
-    min-width: 142px;
+    width: 100%;
     height: 50px;
     text-align: center;
     font-size: 15px;
