--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -19,7 +19,7 @@ hr {
     padding: 10px;
     flex-grow: 1;
     min-width: 100px;
-    margin: 0 10px;
+    margin: 0 7px;
 
 }
 
@@ -32,7 +32,7 @@ hr {
     color: rgba(0, 0, 0, 0.50);
     font-size: 12px;
     font-weight: 400;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .post-details {
