--- a/src/css/FindFillIn.css
+++ b/src/css/FindFillIn.css
@@ -1,3 +1,8 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+body {
+    font-family: Pretendard, serif;
+}
+
 .react-calendar button:enabled:hover {
     cursor: pointer;
 }
@@ -169,7 +174,7 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 }
 
 .request_to {
-    font-size: 13pt;
+    font-size: 13px;
     color: rgba(0, 0, 0, 0.6);
     margin-top: 15px;
     display: flex;
@@ -198,30 +203,32 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 }
 
 .request_date_container {
-    font-size: 12pt;
+    display: flex;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.6);
-    margin-top: 15px;
+    margin: 15px 0 0 0;
 }
 
-.request_date {
-    margin-left: 12px;
+.findfillin_request_date {
+    margin: 0 0 0 12px;
+    font-weight: 500;
     color: #000000
 }
 
 .fillin_reason_container {
-    font-size: 12pt;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
-    margin-top: 15px;
+    margin: 15px 0 0 0;
+    justify-content: space-between;
 }
 
 .fillin_reason_field {
-    font-size: 12pt;
+    font-size: 12px;
     color: #000000;
-    margin-left: 12px;
+    margin: 0 0 0 5px;
     border: none;
-    width: 285px;
     flex-grow: 1;
 }
 
@@ -230,7 +237,7 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 }
 
 .change_date {
-    font-size: 12pt;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.6);
     margin-top: 15px;
 }
@@ -243,4 +250,8 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 .fillin_calendar {
     display: flex;
     justify-content: center;
+}
+
+.fillin_reason_container span {
+    width: 30px;
 }
