--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -316,3 +316,144 @@
     font-size: 12px;
     color: #B3B3B3;
 }
+
+.myUnit .myUnit_room_container {
+    margin: 0 0 20px 0;
+}
+
+.myUnit .myUnit_roomNumber {
+    color: #6A9CFD;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0 0 12px 0;
+}
+
+.myUnit .myUnit_dormUserInfo {
+    display: flex;
+    color: black;
+    font-size: 14px;
+    margin: 0 0 10px 0;
+}
+
+.myUnit .myUnit_leader {
+    border-radius: 5px;
+    background: #6A9CFD;
+    color: white;
+    padding: 0 6px;
+    font-size: 10px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 15px;
+}
+
+.myPenalty .myPenalty_horizontal_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0 7px 0;
+    border-bottom: solid 1px #E0E0E0;
+}
+
+.myPenalty .myPenalty_date {
+    font-size: 15px;
+    font-weight: 600;
+    color: #616161;
+}
+
+.myPenalty .myPenalty_score {
+    font-size: 12px;
+    font-weight: 700;
+    color: #6A9CFD;
+}
+
+.myPenalty .myPenalty_score_text {
+    font-size: 12px;
+    font-weight: 600;
+    color: #8E8E8E;
+}
+
+.myPenalty .myPenalty_reason {
+    height: 53px;
+    font-size: 12px;
+    font-weight: 500;
+    color: black;
+    line-height: 24px;
+    padding: 4px 0;
+}
+
+.myPenalty .myPenalty_container {
+    margin: 0 0 4px 0;
+}
+
+.cleaning_container {
+    display: flex;
+    height: 14px;
+    align-items: center;
+    margin: 0 0 15px 0;
+}
+
+.cleaning_date{
+    font-size: 12px;
+    margin: 0 110px 0 0;
+}
+
+.cleaning_cleaned{
+    width: 55px;
+    font-size: 12px;
+    margin: 0 37px 0 0;
+    text-align: center;
+}
+
+.cleaning_checked {
+    width: 32px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.cleaningHistory_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cleaningHistory_status {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 85px;
+}
+
+.cleaningHistory_cleaned_true, .cleaningHistory_checked_true {
+    border-radius: 5px;
+    background: #CDDEFE;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 28px;
+    color: #0358FC;
+    display: flex;
+    font-size: 12px;
+}
+
+.cleaningHistory_checked_false, .cleaningHistory_cleaned_false {
+    border-radius: 5px;
+    background: #F2F2F2;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 28px;
+    color: #8E8E8E;
+    display: flex;
+    font-size: 12px;
+}
+
+.cleaningHistory_date {
+    color: black;
+    font-size: 14px;
+}
+
+.cleaningHistory_content {
+    margin: 0 0 12px 0;
+}
