--- a/src/css/RepairApply.css
+++ b/src/css/RepairApply.css
@@ -5,16 +5,16 @@ body {
 
 .repair_title_container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    padding: 0 25px 0 16px;
-    height: 49px;
-    justify-content: space-between;
+    padding: 9px 24px 10px 16px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
 
 .repair_title_container img {
     cursor: pointer;
+    margin: 0 8px 0 0;
 }
 
 .request_container {
