--- a/src/css/StayOut.css
+++ b/src/css/StayOut.css
@@ -226,6 +226,7 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 
 .title_icon {
     cursor: pointer;
+    margin: 0 8px 0 0;
 }
 
 .edit_btn {
@@ -336,11 +337,11 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
     justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    padding: 10px;
+    padding: 7px 24px 12px 16px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
 }
 
-.stayout_title_left_content { /*ToDo: 모바일 뷰로 생각했을 때 가로 길이*/
+.stayout_title_left_content {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -385,6 +386,7 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
     font-size: 12px;
     align-self: flex-start;
     margin-block: 0;
+    line-height: normal;
 }
 
 .recent_selection_container {
