[FEAT] 게시글 검색

--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -125,6 +125,7 @@ Input {
     cursor: pointer;
     margin: 0 5px;
     padding: 2px;
+    text-align: center;
 }
 
 .term_line .round_checkbox::before {
