--- a/src/css/PostView.css
+++ b/src/css/PostView.css
@@ -13,6 +13,10 @@ hr {
     padding-right: 0px 0px 0px 5px;
 }
 
+.post-details img {
+    width: 16px;
+}
+
 .delivery-blue-text {
     color: #6A9CFD;
     font-weight: 600;
