--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,11 +12,11 @@ body, #root{
 .center_content_container {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     justify-content: center;
     padding: 24px;
     margin: 0 auto;
     min-width: 320px;
+    overflow: hidden;
 }
 
 .content_container {
