--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -8,7 +8,6 @@ hr {
     display: flex;
     justify-content: center;
     align-content: space-between;
-    position: fixed;
     background: white;
 }
 
@@ -26,7 +25,7 @@ hr {
 }
 
 .post-list {
-    padding-top: 50px;
+    overflow-y: auto;
 }
 
 .post-title {
@@ -116,7 +115,7 @@ hr {
 
 #delivery_sort {
     height: 30px;
-    margin-top: 5px;
+    margin-top: 10px;
     padding: 7px;
     font-size: 13px;
     border-radius: 5px;
@@ -124,3 +123,4 @@ hr {
     text-align: center;
     background: rgba(217, 217, 217, 0.00);
 }
+
