--- a/src/css/Unit.css
+++ b/src/css/Unit.css
@@ -62,6 +62,7 @@
     border-radius: 10px;
     border: 1px solid #6A9CFD;
     padding: 16px;
+    height: 150px;
 }
 
 .user_info {
@@ -200,4 +201,10 @@
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.1);
     padding: 18px 20px;
     height: 110px;
+}
+
+.today_not_clean {
+    color: #B3B3B3;
+    width: 100%;
+    text-align: center;
 }
