--- a/src/css/ChatRoom.css
+++ b/src/css/ChatRoom.css
@@ -9,6 +9,8 @@ body {
     padding: 10px 16px;
     font-size: 16px;
     font-weight: 600;
+    height: 24px;
+    align-items: center;
 }
 
 .chatRoom_upper_icon {
