--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -26,6 +26,7 @@ hr {
 
 .post-list {
     overflow-y: auto;
+    padding: 0 10px;
 }
 
 .post-title {
@@ -39,6 +40,10 @@ hr {
     font-weight: 400;
     margin-top: 0;
     word-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .post-details {
@@ -104,8 +109,8 @@ hr {
     padding: 10px;
     font-size: 16px;
     position: absolute;
-    bottom: 70px;
-    right: 20px;
+    bottom: 10%;
+    right: 5%;
 }
 
 .newPostBtn img{
@@ -123,5 +128,23 @@ hr {
     border: 1px solid #E6E6E6;
     text-align: center;
     background: rgba(217, 217, 217, 0.00);
+}
+
+.post_not_exist {
+    color: #B3B3B3;
+    font-weight: 500;
+    width: 100%;
+    margin: 30px 0;
+    text-align: center;
+}
+
+.post-list::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 10px;
+    background: #8E8E8E;
+}
+
+.post-list::-webkit-scrollbar {
+    width: 5px;
 }
 
