--- a/src/css/FuncPannel.css
+++ b/src/css/FuncPannel.css
@@ -51,6 +51,7 @@
     background: #FFF;
     box-shadow: 0 -4px 10px 0 rgba(0, 0, 0, 0.05);
     padding: 32px 25px 40px 25px;
+    height: 250px;
 }
 
 .sliding_tab span {
@@ -81,4 +82,16 @@
 .sliding_btn_container {
     display: flex;
     justify-content: center;
+}
+
+.func_modal_container {
+    font-size: 13px;
+    text-align: center;
+    width: 194px;
+    height: fit-content;
+    padding: 45px 27px 26px 27px;
+}
+
+.func_modal_container .modal_btn_yes {
+    margin: 20px 0 0 0;
 }
