--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -292,6 +292,10 @@
     font-size: 12px;
     color: #8E8E8E;
     margin: 4px 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .myPost .myPost_horizontal_container, .myDeliveryPost .myPost_horizontal_container{
