--- a/src/css/PostView.css
+++ b/src/css/PostView.css
@@ -77,6 +77,9 @@ hr {
 #commentForm {
     display: flex;
     align-items: center;
+    height: 28px;
+    padding: 10px 8px;
+    box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.05);
 }
 
 #comment-input {
@@ -85,10 +88,11 @@ hr {
     border: none;
     padding: 10px 14px;
     margin: 2px;
+    height: 12px;
 }
 
 #comment-input::placeholder {
-    font-family: Pretendard;
+    font-family: Pretendard serif;
     font-size: 12px;
     color: #8E8E8E;
     font-weight: 700;
@@ -96,4 +100,26 @@ hr {
 
 .comment_btn {
     width: 12px;
+}
+
+.post-small-modal {
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.20);
+    position: absolute;
+    right: 4%;
+    top: 3%;
+}
+
+.post-small-modal div {
+    width: 90px;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    margin: 8px 0 0 0;
+    padding: 0 0 7px 0;
+}
+
+#post_share_btn {
+    border-bottom: 0.2px solid #B3B3B3;
 }
