--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,7 @@ body, #root{
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .center_content_container {
@@ -18,6 +19,7 @@ body, #root{
     min-width: 320px;
     max-width: 500px;
     overflow: hidden;
+    width: 87%;
 }
 
 .content_container {
