--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -108,9 +108,10 @@ hr {
     align-items: center;
     padding: 10px;
     font-size: 16px;
-    position: absolute;
-    bottom: 10%;
-    right: 5%;
+    position: sticky;
+    width: fit-content;
+    margin-top: auto;
+    margin-left: auto;
 }
 
 .newPostBtn img{
