--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -31,15 +31,18 @@ button {
     margin: auto;
     min-width: 320px;
     max-width: 500px;
+    overflow: auto;
 }
 
 .signup_form {
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 .signin_form {
     max-width: 500px;
+    padding-top: 24px;
     margin: 0 auto;
 }
 
