--- a/src/css/Terms.css
+++ b/src/css/Terms.css
@@ -21,6 +21,7 @@ ul {
     border-radius: 5px;
     border: 1.5px solid #E6E6E6;
     padding: 6px 16px;
+    margin-bottom: 50px;
 }
 
 .term-box p {
