--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,7 @@ body, #root{
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -24,8 +25,8 @@ body, #root{
 .content_container {
     max-width: 500px;
     padding: 24px;
-    min-width: 320px;
     margin: 0 auto;
+    overflow: auto;
 }
 
 .title_container {
@@ -34,4 +35,10 @@ body, #root{
     font-size: 16px;
     padding: 12px 8px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
+    position: sticky;
+    top: 0;
+    background-color: white;
+    width: 100vw;
+    box-sizing: border-box;
+    z-index: 1000;
 }
