--- a/src/css/MyPenalty.css
+++ b/src/css/MyPenalty.css
@@ -8,8 +8,9 @@ body {
     justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    padding: 12px 24px 12px 16px;
+    padding: 6px 24px 6px 16px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
+    height: 36px;
 }
 
 .myPenalty_title_horizontal_container {
