--- a/src/css/Bottombar.css
+++ b/src/css/Bottombar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     margin: 0;
     box-sizing: border-box;
