--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,6 +14,7 @@ body, #root{
 .center_content_container {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     padding: 24px;
     margin: 0 auto;
     min-width: 320px;
