[REFACTOR] 청소 내역 부분

--- a/src/css/Unit.css
+++ b/src/css/Unit.css
@@ -193,7 +193,7 @@
     width: 49%;
 }
 
-.history_container {
+.cleaning_history_container {
     display: grid;
     place-items: center;
     margin-top: 11px;
