--- a/src/css/StayOut.css
+++ b/src/css/StayOut.css
@@ -567,3 +567,19 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 hr {
     width: 95% !important;
 }
+
+.stayout_content_container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    padding: 10px;
+    margin: 0px auto 90px auto;
+    min-width: 320px;
+    max-width: 500px;
+    overflow: auto;
+    width: 87%;
+}
+
+#blank_div {
+    height: 90px;
+}
