--- a/src/css/Upperbar.css
+++ b/src/css/Upperbar.css
@@ -1,9 +1,10 @@
 .upper_bar {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 0 20px;
     background: #FFF;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
+    min-height: 60px;
 }
 
 .upper_bar_logo {
