--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,6 +23,16 @@ body, #root{
     width: 87%;
 }
 
+.center_content_container::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 10px;
+    background: #8E8E8E;
+}
+
+.center_content_container::-webkit-scrollbar {
+    width: 5px;
+}
+
 .content_container {
     max-width: 500px;
     padding: 24px;
@@ -34,7 +44,9 @@ body, #root{
     display: flex;
     align-items: center;
     font-size: 16px;
-    padding: 12px 8px;
+    padding: 0 8px;
+    height: 48px;
+    min-height: 48px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
     position: sticky;
     top: 0;
@@ -42,4 +54,30 @@ body, #root{
     width: 100vw;
     box-sizing: border-box;
     z-index: 1000;
+    justify-content: space-between;
+}
+
+.title_container div {
+    display: flex;
+    align-items: center;
+}
+
+.announcement_icon {
+    cursor: pointer;
+    margin: 0 8px 0 0;
+}
+
+.backBtn {
+    cursor: pointer;
+    margin: 0 8px 0 0;
+}
+
+.content_container::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 10px;
+    background: #8E8E8E;
+}
+
+.content_container::-webkit-scrollbar {
+    width: 5px;
 }
