--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,6 +11,10 @@ body, #root{
     -webkit-tap-highlight-color: transparent;
 }
 
+button, a, select {
+    cursor: pointer;
+}
+
 .center_content_container {
     display: flex;
     flex-direction: column;
@@ -25,7 +29,7 @@ body, #root{
 
 .content_container {
     max-width: 500px;
-    padding: 24px;
+    padding-top: 24px;
     margin: 0 auto;
     overflow: auto;
 }
@@ -42,4 +46,8 @@ body, #root{
     width: 100vw;
     box-sizing: border-box;
     z-index: 1000;
+}
+
+.title_container img {
+    cursor: pointer;
 }
