--- a/src/css/NewHome.css
+++ b/src/css/NewHome.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     background: linear-gradient(90deg, #D4E3FF 0%, #6A9CFD 0.01%, #3176FC 84.43%);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.10);
+    cursor: pointer;
 }
 
 .gradient-box p {
@@ -17,6 +18,7 @@
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.10);
+    cursor: pointer;
 }
 
 .white-box p {
@@ -78,6 +80,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 }
 
 .info-menu p {
