--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -72,6 +72,7 @@ Input {
 
 .term_line img {
     margin-left: auto;
+    cursor: pointer;
 }
 
 .bottomBtn {
@@ -84,6 +85,7 @@ Input {
     background-color: #F7F7F7;
     color: #8E8E8E;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .bottomBtn:hover{
@@ -229,6 +231,7 @@ Input {
 .otherLink span {
     font-size: 12px;
     padding: 0px 16px;
+    cursor: pointer;
 }
 
 .otherLink .blue_link {
@@ -285,6 +288,7 @@ Input {
     font-size: 12px;
     font-weight: 700;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 #blueResultText {
