--- a/src/css/Upperbar.css
+++ b/src/css/Upperbar.css
@@ -6,6 +6,10 @@
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
 }
 
+.upper_bar img {
+    cursor: pointer;
+}
+
 .upper_bar_logo {
     height: 20px;
     margin-right: auto;
